# jsql

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
python/jsql/: __init__.py  _jsql.pyi
src/: errors.rs  lib.rs
src/dialects/: mongo.rs  mysql.rs
src/query/: decode.rs  decode_json.rs  decode_python.rs  error.rs  express.rs  mod.rs  operators.rs
tests/: test.py  test_mongo.py  test_mysql.py  test_mysql.rs  test_unit.py
