[package]
name = "jsql"
version = "0.1.0"
edition = "2021"
description = "Convert JSON objects to SQL filter expressions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "jsql"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-ffi = { version = "^0.20.2", default_features = false, features = ["extension-module"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
jiter = {version = "0.0.6", features = ["python"]}